--- a/index.html
+++ b/index.html
@@ -95,7 +95,47 @@
                         <h3> Experienced Crew </h3>
                         <p> It is a long established fact that a reader will be distracted by the readable</p>
                     </div>
-                    <img class="services-image" src="./PlaneMiddle.png"
+                    <img class="services-image" src="./PlaneMiddle.png">
+                </div>
+                <div class="planes">
+                    <div class="container">
+                        <h2> Luxury Charters </h2>
+                        <ul class="planes-list">
+                            <li class="item">
+                                <div class="image-wrapper">
+                                    <img class="plane-image" src="APlane.png" class="planesimg">
+                                    <p>
+                                        Piaggio P.180 Avanti
+                                    </p>
+                                </div>
+                            </li>
+                            <li class="item">
+                                <div class="image-wrapper">
+                                    <img class="plane-image" src="A2ndPlane.png" class="planesimg">
+                                    <p>
+                                        Pilatus PC-12
+                                    </p>
+                                </div>
+                            </li>
+                            <li class="item">
+                                <div class="image-wrapper">
+                                    <img class="plane-image" src="ANotherPlane.png" class="planesimg">
+                                    <p>
+                                        Piper Pa27 Aztec
+                                    </p>
+                                </div>
+                            </li>
+                            <li class="item">
+                                <div class="image-wrapper">
+                                    <img class="plane-image" src="A3dPlane.png" class="planesimg">
+                                    <p>
+                                        Beech BE100 King Air                                    
+                                    </p>
+                                </div>
+                            </li>
+                        </ul>
+                        <img class="planes-background" src="TheWorldInPixels.png" alt="theworld"> 
+                    </div>
                 </div>
             </div>
         </div>
