--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                             <li class="advantages-item tick"> Guaranteed fleet access</li>       
                         </ul> 
                         <p class="price"> <span class=number>$680</span>/month</p>
-                        <button> Choose </button>
+                        <button class="advantages-button"> Choose </button>
                     </li>
                 </ul>
             </div>
