--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" crossorigin>
-</head>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet"></head>
 <body>
     <header>
         <div class="container">
-            <nav>
+            <nav class="navigation">
                 <a href="./index.html">
                     <img src="./Logo.svg" alt="logo"> 
                 </a> 
@@ -25,11 +24,11 @@
                     <li> <a href="tba" class="new-link"> Luxury Charters </a></li>
                     <li> <a href="tba" class="new-link"> Membership </a></li>
                 </ul>
+                <div class="header-buttons"> 
+                    <button class="reg-button"> Register </button>
+                    <button class="login-button"> Sign in </button>
+                </div>
             </nav>
-            <div class="header-buttons"> 
-                <button class="reg-button"> Register </button>
-                <button class="login-button"> Sign in </button>
-            </div>
         </div>
     </header>
     <main>
@@ -154,7 +153,7 @@
                             <li class="advantages-item cross"> Guaranteed fleet access</li>       
                         </ul> 
                         <p class="price"> <span class=number>$250</span>/month</p>
-                        <button> Choose </button>
+                        <button class="advantages-button"> Choose </button>
                     </li>
                     <li class="membership-item">
                         <h3>Business</h3>
@@ -167,7 +166,7 @@
                             <li class="advantages-item cross"> Guaranteed fleet access</li>       
                         </ul> 
                         <p class="price"> <span class=number>$480</span>/month</p>
-                        <button> Choose </button>
+                        <button class="advantages-button"> Choose </button>
                     </li>
                     <li class="membership-item">
                         <h3>Elite</h3>
