--- a/index.html
+++ b/index.html
@@ -185,5 +185,28 @@
             </div>
         </section>
    </main>
+   <footer class="footer">
+    <img class="footer-image" src="./Open plane doors.png" alt=""> 
+    <div class="footer-bottom">
+        <div class="container">
+            <div class="footer-logo">
+                <a href="./index.html"> 
+                    <img src="./Doublogo.png" alt=""> 
+                </a>
+            </div>
+            <div class="footer-info">
+                <nav>
+                    <ul>
+                        <li href="#" class="footer-link"> Services </li>
+                        <li href="#" class="footer-link"> About us</li>
+                        <li href="#" class="footer-link"> News </li>
+                        <li href="#" class="footer-link"> Contact</li>
+                    </ul>
+                </nav>
+                <p class="copyright"> 2021 Air. All rights reserved.</p>
+            </div>
+        </div>
+    </div>
+   </footer>
 </body>
 </html>
