--- a/index.html
+++ b/index.html
@@ -24,11 +24,16 @@
                     <li> <a href="tba" class="new-link"> Luxury Charters </a></li>
                     <li> <a href="tba" class="new-link"> Membership </a></li>
                 </ul>
+            </nav>
                 <div class="header-buttons"> 
                     <button class="reg-button"> Register </button>
                     <button class="login-button"> Sign in </button>
                 </div>
-            </nav>
+                <div class="menu-button"> 
+                    <span class="bar"> </span>
+                    <span class="bar"> </span>
+                    <span class="bar"> </span>
+                </div>
         </div>
     </header>
     <main>
@@ -209,4 +214,6 @@
     </div>
    </footer>
 </body>
+<script src="./index.js"> 
+</script>
 </html>
